Replace BackboneGeneration class with BackboneFunction